--- a/resources/sass/pages/_resume.scss
+++ b/resources/sass/pages/_resume.scss
@@ -11,6 +11,10 @@
         @apply text-base;
     }
 
+    strong {
+        @apply my-0;
+    }
+
     h2 {
         span {
             background: #002b36;
