--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,7 @@
 @import '~highlight.js/styles/solarized-dark.css';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands.scss';
+@import '~@fortawesome/fontawesome-free/scss/regular.scss';
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
