--- a/resources/sass/_custom-styling.scss
+++ b/resources/sass/_custom-styling.scss
@@ -39,5 +39,5 @@ img {
 }
 
 .code-highlight, code {
-    @apply text-sm bg-gray-800 text-white p-2 rounded-sm;
+    @apply text-sm bg-gray-800 text-white px-1 rounded-sm;
 }
