fix styling in blogs page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,5 +9,6 @@
 // custom styling
 @import './custom-styling';
 @import './pages/resume';
+@import './pages/home';
 
 @import "tailwindcss/utilities";
